# lib-pe-sunat-python

./: .coveragerc.test.ini  .editorconfig  .flake8  .gitignore  .isort.cfg  .markdownlint.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.md  commitlint.config.js  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml  ci.yaml  dependency-review.yaml  deploy.yaml  git-commit-lint.yaml  release.yaml
cordada/pe_sunat/: __init__.py
cordada/pe_sunat/ruc/: constants.py  entities.py
cordada/pe_sunat/tests/: test_ruc_entities.py
docs/: Development.md
make/: python.mk
make/_common/: help.mk
src/cordada/pe_sunat/: __init__.py
