# Setuptools Configuration
#
# Documentation:
# - https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# - https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# - Classifiers: https://pypi.org/classifiers/

[metadata]
name = pe-sunat
version = attr: cordada.pe_sunat.__version__
description = Python library for Superintendencia Nacional de Aduanas y de Administración Tributaria (SUNAT) of Peru.
author = Cordada SpA
author_email = no-reply@cordada.com
url = https://github.com/cordada/lib-pe-sunat-python/
license = MIT
long_description = file:
  README.md,
  CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
# python_requires = >=3.8
packages = find_namespace:
zip_safe = False
include_package_data = True
# install_requires =
#   example >=1.2.3

[options.packages.find]
where = .
include =
  cordada
exclude =
